# homeworld

./: .gitignore  .travis.yml  LICENSE  README.md  SHA512SUM.UPSTREAM  bors.toml  chroot-packages.list  create-chroot.sh  debian-checksum.sh  deploy.md  enter-chroot-ci.sh  enter-chroot.sh  how-to-verify-keys.md  pull-upstream.sh  remote-builds.txt  run_sdk_vm.sh  snapshot-cache-nginx  trust.txt  update-chroot.sh
admin/: ectl
platform/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  extract-apt-setup.sh
platform/aci-pull-monitor/aci-pull-monitor/: BUILD.bazel  aci-pull-monitor.go  aci-pull-monitor.service  aci-pull-monitor.service.in  launch-aci-pull-monitor.sh
platform/aci-pull-monitor/main/: aci-pull-monitor.go
platform/aci-pull-monitor/pullcheck/: BUILD.bazel
platform/apt-setup/: BUILD.bazel  homeworld.sources.in
platform/auth-monitor/: BUILD.bazel  auth-monitor.go  auth-monitor.service
platform/autostart/: BUILD.bazel  homeworld-autostart.service  launch-autostart.sh
platform/bazel/: 0001-containerregistry-py2.patch  BUILD.bazel  aci-manifest-gen.py  assert.bzl  cache-compute.py  deps.bzl  deps_early.bzl  gorepo_patchfix.bzl  hash-compute.py  oci_digest.bzl  oci_to_tar.bzl  package.bzl  substitute.bzl  substitute.py  util.bzl  version-compute.py  version.bzl  workspace-status.sh  zip_file.bzl
platform/bootstrap-registry/: BUILD.bazel  homeworld  postinst.sh  prerm.sh
platform/ceph/: BUILD.bazel  deps.bzl  deps_early.bzl  unpack.bzl
platform/ceph/foreign_cc/: 0001-fix-date-quoting.patch  0002-more-output-groups.patch
platform/cni-plugins/: 10-flannel.conf  BUILD.bazel  deps.bzl
platform/cri-o/: BUILD.bazel  build.patch  conmon.patch  crio-shutdown.service  crio.conf  crio.conf.in  crio.conf.upstream  crio.service  deps.bzl
platform/cri-o/pause/: BUILD.bazel
platform/cri-tools/: BUILD.bazel  deps.bzl
platform/debian/: BUILD.bazel  clean_fakechroot.py  debclean.bzl  debian.bzl
platform/dns-monitor/: BUILD.bazel  dns-monitor.go  kubernetes.yaml.in
platform/dnsmasq/: BUILD.bazel  BUILD.import  deps.bzl  kubernetes.yaml.in
platform/docker-registry/: BUILD.bazel  deps.bzl  docker-registry.patch  docker-registry.service  docker-registry.yaml  homeworld
platform/etcd/: BUILD.bazel  deps.bzl  etcd-visibility.patch  etcdctl-visibility.patch
platform/etcd-metrics-exporter/: BUILD.bazel  etcd-metrics-exporter.service
platform/flannel/: BUILD.bazel  deps.bzl  kubernetes.yaml.in
platform/flannel-monitor/: BUILD.bazel  kubernetes.yaml.in
platform/flannel-monitor/collector/: BUILD.bazel  flannel-monitor-collector.go
platform/flannel-monitor/common/: BUILD.bazel  common.go
platform/flannel-monitor/monitor/: BUILD.bazel  flannel-monitor.go
platform/flannel-monitor/reflector/: BUILD.bazel  flannel-monitor-reflector.go
platform/go/: 0001-add-missing-platforms.patch  0001-allow-gazelle-prepatch.patch  deps.bzl  deps_early.bzl  helper.bzl
platform/keysystem/: BUILD.bazel  buglog.txt  deps.bzl  run-tests.sh
platform/keysystem/api/: BUILD.bazel  config.go  config_test.go
platform/keysystem/integrationtesting/: BUILD.bazel  integrationhelper.go
platform/keysystem/keyadmit/: BUILD.bazel  keyadmit.go
platform/keysystem/keyclient/: BUILD.bazel  keyclient.go
platform/keysystem/keygateway/: BUILD.bazel  keygateway.go
platform/keysystem/keygen/: BUILD.bazel  generate.go
platform/keysystem/keygenupstream/: BUILD.bazel  keygenupstream.go
platform/keysystem/keyinitadmit/: BUILD.bazel  keyinitadmit.go
platform/keysystem/keyinittoken/: BUILD.bazel  keyinittoken.go
platform/keysystem/keylocalcert/: BUILD.bazel  keylocalcert.go
platform/keysystem/keyreq/: BUILD.bazel  keyreq.go
platform/keysystem/keyserver/: BUILD.bazel  keyserver.go
platform/keysystem/systemd/: keyclient.service  keyserver.service  launch-keyclient-config-update.sh  update-host.service  update-host.sh  update-keyclient-config.service
platform/keysystem/worldconfig/: BUILD.bazel  apis.go  keyclient.go  keyserver.go  spiresetup.go
platform/knc/: BUILD.bazel  BUILD.import  deps.bzl
platform/kube-dns/: BUILD.bazel  deps.bzl  dns-visibility.patch
platform/kube-state-metrics/: BUILD.bazel  deps.bzl  kube-state-metrics.service  launch-kube-state-metrics.sh  launch.go  state-visibility.patch
platform/kubernetes/: 0001-fix-bazel-compat.patch  0101-bump-openapi.patch  0102-gazelle-prefix.patch  0103-gazelle-proto-disable.patch  0104-staging-prefix.patch  0105-vendor-importmap.patch  0106-reformat-generators.patch  0107-go-genrule-bump-2.patch  0107-go-genrule-bump.patch  0108-no-prefix.patch  0109-staging-importmap.patch  0110-rerun-gazelle-2.patch  0110-rerun-gazelle-3.patch  0110-rerun-gazelle.patch  BUILD.bazel  apiserver.service  deps.bzl  kube-ctrlmgr.service  kube-proxy.service  kube-scheduler.service  kubelet.service  launch-apiserver.sh  launch-ctrlmgr.sh  launch-kubelet.sh  launch.go
platform/kubernetes/wrapper/: BUILD.bazel  wrap.go
platform/metallb/: BUILD.bazel  deps.bzl  kubernetes.yaml.in
platform/oci-sig-policy/: BUILD.bazel  policy.json
platform/oci-tools/: BUILD.bazel  deps.bzl  image-tools.patch  skopeo.patch
platform/prometheus/: BUILD.bazel  deps.bzl  prometheus-visibility.patch  prometheus.service
platform/prometheus-client/: deps.bzl
platform/prometheus-node-exporter/: BUILD.bazel  deps.bzl  visibility.patch
platform/pull-monitor/pull-monitor/: BUILD.bazel  deps.bzl  interact.go  pull-monitor.go  (+1 more)
platform/python/: BUILD.bazel  deps.bzl  deps_early.bzl  resources.bzl  template_init.py
platform/rkt/: BUILD.bazel  BUILD.import  rkt.patch
platform/rkt-config/: BUILD.bazel
platform/rook/: BUILD.bazel  deps.bzl
platform/runc/: BUILD.bazel  deps.bzl
platform/services/: BUILD.bazel
platform/setup-queue/: BUILD.bazel  deploy.go  setup-queue.service
platform/spire/: BUILD.bazel
platform/upload/: .gitignore  BUILD.bazel  branches.yaml.example  container_push.bzl  upload.bzl
platform/user-grant/: BUILD.bazel  grant.go  kubernetes.yaml.in
platform/version/: BUILD.bazel
platform/website/: BUILD.bazel  kubernetes.yaml.in
(+1107 files in other folders)
