load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:prefix github.com/sipb/homeworld/platform
gazelle(name = "gazelle")

buildifier(
    name = "buildifier-check",
    mode = "check",
)

buildifier(
    name = "buildifier-fix",
    lint_mode = "fix",
    mode = "fix",
)

exports_files([
    "VERSION",
])

genrule(
    name = "fetchversion",
    outs = ["GIT_VERSION"],
    cmd = "grep STABLE_GIT_COMMIT bazel-out/stable-status.txt | cut -d ' ' -f 2 >$@",
    stamp = 1,
    visibility = ["//visibility:public"],
)
