load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:prefix github.com/sipb/homeworld/platform
gazelle(name = "gazelle")

buildifier(
    name = "buildifier-check",
    lint_mode = "warn",
    lint_warnings = [
        "-function-docstring",
        "-function-docstring-args",
        "-function-docstring-header",
        "-module-docstring",
        "-print",
    ],
    mode = "check",
)

buildifier(
    name = "buildifier-fix",
    lint_mode = "fix",
    mode = "fix",
)
