load("//bazel:substitute.bzl", "substitute")
load("//bazel:package.bzl", "homeworld_deb")

substitute(
    name = "homeworld.sources",
    kfs = {
        "APT_URL": "//upload:DOWNLOAD_URL",
        "APT_BRANCH": "//upload:BRANCH_NAME",
    },
    template = ":homeworld.sources.in",
)

substitute(
    name = "homeworld.pref",
    kfs = {
        "HOST_BRANCH": "//upload:DOWNLOAD_URL_HOST",
    },
    template = ":homeworld.pref.in",
)

homeworld_deb(
    name = "package",
    data = {
        "//upload:keyring.gpg": "/usr/share/keyrings/homeworld-archive-keyring.gpg",
        ":homeworld.sources": "/etc/apt/sources.list.d/homeworld.sources",
        ":homeworld.pref": "/etc/apt/preferences.d/homeworld.pref",
    },
    package = "homeworld-apt-setup",
    visibility = ["//visibility:public"],
)
