load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:package.bzl", "homeworld_deb")

go_library(
    name = "go_default_library",
    srcs = ["auth-monitor.go"],
    importpath = "github.com/sipb/homeworld/platform/auth-monitor",
    visibility = ["//visibility:private"],
    deps = [
        "//keysystem/api:go_default_library",
        "//keysystem/api/reqtarget:go_default_library",
        "//keysystem/api/server:go_default_library",
        "//keysystem/worldconfig:go_default_library",
        "//keysystem/worldconfig/paths:go_default_library",
        "//util/osutil:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
    ],
)

go_binary(
    name = "auth-monitor",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

homeworld_deb(
    name = "package",
    bin = {
        ":auth-monitor": "/usr/bin/auth-monitor",
    },
    data = {
        ":auth-monitor.service": "/usr/lib/systemd/system/auth-monitor.service",
    },
    package = "homeworld-auth-monitor",
    depends = [
        "homeworld-keysystem",
    ],
    visibility = ["//visibility:public"],
)
