native.py_binary(
    name = "aci-manifest-gen",
    srcs = ["aci-manifest-gen.py"],
    visibility = ["//visibility:public"],
)

native.py_binary(
    name = "substitute",
    srcs = ["substitute.py"],
    visibility = ["//visibility:public"],
)

native.py_binary(
    name = "version-compute",
    srcs = ["version-compute.py"],
    visibility = ["//visibility:public"],
)

native.py_binary(
    name = "hash-compute",
    srcs = ["hash-compute.py"],
    visibility = ["//visibility:public"],
)
