load("//bazel:package.bzl", "homeworld_deb")
load("//bazel:substitute.bzl", "substitute")

substitute(
    name = "index.html",
    template = ":index.html.in",
    kfs = {
        "APT_URL": "//upload:DOWNLOAD_URL",
    },
)

homeworld_deb(
    name = "package",
    data = {
        ":homeworld": "/etc/nginx/sites-available/homeworld",
        ":index.html": "/usr/lib/hyades/registry/index.html",
        "//upload:keyring.asc": "/usr/lib/hyades/registry/pubkey.asc",
    },
    package = "homeworld-bootstrap-registry",
    prerm = ":prerm.sh",
    postinst = ":postinst.sh",
    depends = [
        "nginx",
    ],
    visibility = ["//visibility:public"],
)
