load("//bazel:package.bzl", "homeworld_deb")
load("//bazel:substitute.bzl", "substitute")

# TODO: for crio, use flags -ldflags '-s -w -X main.gitCommit="[...]" -X main.buildInfo=[...]'
# and -tags "exclude_graphdriver_devicemapper libdm_no_deferred_remove containers_image_ostree_stub seccomp containers_image_ostree_stub"
# (maybe?)

homeworld_deb(
    name = "package",
    bin = {
        "@com_github_kubernetes_sigs_cri_o//cmd/crio": "/usr/bin/crio",
        "@com_github_kubernetes_sigs_cri_o//conmon": "/usr/libexec/crio/conmon",
    },
    data = {
        ":crio.conf": "/etc/crio/crio.conf",
        "@com_github_kubernetes_sigs_cri_o//:seccomp.json": "/etc/crio/seccomp.json",
        "@com_github_kubernetes_sigs_cri_o//:crio-umount.conf": "/usr/local/share/oci-umount/oci-umount.d/crio-umount.conf",
        ":crictl.yaml": "/etc/crictl.yaml",
        ":crio.service": "/usr/lib/systemd/system/crio.service",
        ":crio-shutdown.service": "/usr/lib/systemd/system/crio-shutdown.service",
    },
    package = "homeworld-cri-o",
    depends = [
        "homeworld-cni-plugins",
        "homeworld-oci-sig-policy",
        "homeworld-runc",
        "libgpgme11",
        "libostree-1-1",
    ],
    visibility = ["//visibility:public"],
)

substitute(
    name = "crio.conf",
    template = ":crio.conf.in",
    kfs = {
        "PAUSE_DIGEST": "//cri-o/pause:oci.ocidigest",
    },
)