load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:package.bzl", "homeworld_aci")

go_library(
    name = "go_default_library",
    srcs = ["dns-monitor.go"],
    importpath = "github.com/sipb/homeworld/platform/dns-monitor",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    ],
)

go_binary(
    name = "dns-monitor",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

homeworld_aci(
    name = "aci",
    bin = {
        ":dns-monitor": "/usr/bin/dns-monitor",
    },
    aciname = "homeworld.private/dns-monitor",
    exec = ["/usr/bin/dns-monitor"],
    visibility = ["//visibility:public"],
)
