load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:package.bzl", "homeworld_oci")
load("//bazel:substitute.bzl", "substitute")
load("//python:resources.bzl", "py_resources")

go_library(
    name = "go_default_library",
    srcs = ["dns-monitor.go"],
    importpath = "github.com/sipb/homeworld/platform/dns-monitor",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    ],
)

go_binary(
    name = "dns-monitor",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

homeworld_oci(
    name = "oci",
    bin = {
        ":dns-monitor": "/usr/bin/dns-monitor",
    },
    exec = ["/usr/bin/dns-monitor"],
    visibility = ["//visibility:public"],
)

substitute(
    name = "kubernetes.yaml",
    kfs = {
        "digest": ":oci.ocidigest",
    },
    template = ":kubernetes.yaml.in",
    visibility = ["//visibility:public"],
)

py_resources(
    name = "kubelib",
    data = [":kubernetes.yaml"],
    visibility = ["//visibility:public"],
)
