load("//bazel:package.bzl", "homeworld_aci")
load("//bazel:substitute.bzl", "substitute")

# originally based on https://github.com/kubernetes/dns builds

homeworld_aci(
    name = "dnsmasq",
    bin = {
        "@dnsmasq//:dnsmasq": "/usr/sbin/dnsmasq",
    },
    data = {
        ":empty": "/var/run",
        ":dnsmasq.conf": "/etc/dnsmasq.conf",
    },
    aciname = "homeworld.private/dnsmasq",
    deps = [
        "//debian:debian-micro.tgz",
    ],
    exec = ["/usr/sbin/dnsmasq", "--keep-in-foreground"],
    visibility = ["//visibility:public"],
)

homeworld_aci(
    name = "dnsmasq-nanny",
    bin = {
        "@com_github_kubernetes_dns//cmd/dnsmasq-nanny": "/usr/bin/dnsmasq-nanny",
    },
    data = {
        ":empty": "/etc/k8s/dns/dnsmasq-nanny",
    },
    aci_dep = ":dnsmasq",
    exec = ["/usr/bin/dnsmasq-nanny"],
    aciname = "homeworld.private/dnsmasq-nanny",
    visibility = ["//visibility:public"],
)

genrule(
    name = "empty-rule",
    outs = ["empty"],
    cmd = "mkdir $@",
)

substitute(
    name = "kubernetes.yaml",
    template = ":kubernetes.yaml.in",
    kfs = {
        "kube_dns_main_version": "//kube-dns:kube-dns-main-version",
        "kube_dns_sidecar_version": "//kube-dns:kube-dns-sidecar-version",
        "dnsmasq_nanny_version": ":dnsmasq-nanny-version"
    },
    visibility = ["//visibility:public"],
)
