load("//bazel:package.bzl", "homeworld_oci")
load("//bazel:substitute.bzl", "substitute")

# originally based on https://github.com/kubernetes/dns builds

homeworld_oci(
    name = "dnsmasq",
    bin = {
        "@dnsmasq//:dnsmasq": "/usr/sbin/dnsmasq",
    },
    data = {
        ":empty": "/var/run",
        ":dnsmasq.conf": "/etc/dnsmasq.conf",
    },
    deps = [
        "//debian:debian-micro.tgz",
    ],
    exec = ["/usr/sbin/dnsmasq", "--keep-in-foreground"],
    visibility = ["//visibility:public"],
)

homeworld_oci(
    name = "dnsmasq-nanny",
    bin = {
        "@com_github_kubernetes_dns//cmd/dnsmasq-nanny": "/usr/bin/dnsmasq-nanny",
    },
    data = {
        ":empty": "/etc/k8s/dns/dnsmasq-nanny",
    },
    oci_dep = ":dnsmasq",
    exec = ["/usr/bin/dnsmasq-nanny"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "empty-rule",
    outs = ["empty"],
    cmd = "mkdir $@",
)

substitute(
    name = "kubernetes.yaml",
    template = ":kubernetes.yaml.in",
    kfs = {
        "kube_dns_main_digest": "//kube-dns:kube-dns-main.ocidigest",
        "kube_dns_sidecar_digest": "//kube-dns:kube-dns-sidecar.ocidigest",
        "dnsmasq_nanny_digest": ":dnsmasq-nanny.ocidigest",
    },
    visibility = ["//visibility:public"],
)
