load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["etcd-metrics-exporter.go"],
    importpath = "github.com/sipb/homeworld/platform/etcd-metrics-exporter",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_prometheus_client_model//go:go_default_library",
        "@com_github_prometheus_common//expfmt:go_default_library",
    ],
)

go_binary(
    name = "etcd-metrics-exporter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
