load("//bazel:package.bzl", "homeworld_oci")
load("//bazel:substitute.bzl", "substitute")

homeworld_oci(
    name = "oci",
    bin = {
        "//flannel-monitor/monitor": "/usr/bin/flannel-monitor",
        "//flannel-monitor/reflector": "/usr/bin/flannel-monitor-reflector",
        "//flannel-monitor/collector": "/usr/bin/flannel-monitor-collector",
    },
    visibility = ["//visibility:public"],
)

substitute(
    name = "kubernetes.yaml",
    template = ":kubernetes.yaml.in",
    kfs = {
        "version": ":aci-version",
    },
    visibility = ["//visibility:public"],
)
