load("//bazel:package.bzl", "homeworld_aci")
load("//bazel:substitute.bzl", "substitute")

homeworld_aci(
    name = "aci",
    bin = {
        "//flannel-monitor/monitor": "/usr/bin/flannel-monitor",
        "//flannel-monitor/reflector": "/usr/bin/flannel-monitor-reflector",
        "//flannel-monitor/collector": "/usr/bin/flannel-monitor-collector",
    },
    aciname = "homeworld.private/flannel-monitor",
    visibility = ["//visibility:public"],
)

substitute(
    name = "kubernetes.yaml",
    template = ":kubernetes.yaml.in",
    visibility = ["//visibility:public"],
)
