load("//bazel:package.bzl", "homeworld_oci")
load("//debian:debian.bzl", "debinstall")
load("//bazel:substitute.bzl", "substitute")

debinstall(
    name = "debian-mini-with-iptables.tgz",
    base = "//debian:debian-mini.tgz",
    packages = ["iptables"],
)

homeworld_oci(
    name = "oci",
    bin = {
        "@com_github_coreos_flannel//:flannel": "/usr/bin/flanneld",
        # TODO: ldflags: "-X github.com/coreos/flannel/version.Version=${FLANNEL_VER}"
    },
    deps = [
        ":debian-mini-with-iptables.tgz",
    ],
    exec = ["/usr/bin/flanneld"],
    visibility = ["//visibility:public"],
)

substitute(
    name = "kubernetes.yaml",
    template = ":kubernetes.yaml.in",
    kfs = {
        "digest": ":oci.ocidigest",
    },
    visibility = ["//visibility:public"],
)
