load("//bazel:package.bzl", "homeworld_oci")
load("//debian:debian.bzl", "debinstall")
load("//bazel:substitute.bzl", "substitute")

debinstall(
    name = "debian-mini-with-iptables.tgz",
    base = "//debian:debian-mini.tgz",
    packages = ["iptables"],
)

homeworld_oci(
    name = "oci",
    bin = {
        "@com_github_coreos_flannel//:flannel": "/usr/bin/flanneld",
        # TODO: ldflags: "-X github.com/coreos/flannel/version.Version=${FLANNEL_VER}"
    },
    exec = ["/usr/bin/flanneld"],
    visibility = ["//visibility:public"],
    deps = [
        ":debian-mini-with-iptables.tgz",
    ],
)

substitute(
    name = "kubernetes.yaml",
    kfs = {
        "digest": ":oci.ocidigest",
    },
    template = ":kubernetes.yaml.in",
    visibility = ["//visibility:public"],
)
