load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//bazel:package.bzl", "homeworld_oci")

go_binary(
    name = "kube-dns",
    embed = [
        "@com_github_kubernetes_dns//cmd/kube-dns:go_default_library",
    ],
    pure = "on",
    visibility = ["//visibility:public"],
)

homeworld_oci(
    name = "kube-dns-main",
    bin = {
        ":kube-dns": "/usr/bin/kube-dns",
    },
    exec = ["/usr/bin/kube-dns"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "sidecar",
    embed = [
        "@com_github_kubernetes_dns//cmd/sidecar:go_default_library",
    ],
    pure = "on",
    visibility = ["//visibility:public"],
)

homeworld_oci(
    name = "kube-dns-sidecar",
    bin = {
        ":sidecar": "/usr/bin/sidecar",
    },
    exec = ["/usr/bin/sidecar"],
    visibility = ["//visibility:public"],
)
