load("//bazel:package.bzl", "homeworld_deb")

homeworld_deb(
    name = "package",
    bin = {
        "@com_github_kubernetes_kube_state_metrics//:kube-state-metrics": "/usr/bin/kube-state-metrics",
        ":launch-kube-state-metrics.sh": "/usr/lib/hyades/launch-kube-state-metrics.sh",
    },
    data = {
        ":kube-state-metrics.service": "/usr/lib/systemd/system/kube-state-metrics.service",
    },
    package = "homeworld-kube-state-metrics",
    visibility = ["//visibility:public"],
)
